--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+h1, h2 {
+    margin-left: 25px;
+}
+
 p {
-    margin: 100px 100px 75px 150px;
+    margin: 20px 20px 10px 50px;
+}
+
+.figure-border {
+    border: 2px solid blueviolet;
+    padding: 50px, 10px, 10px, 10px;
+    background-color: lavenderblush;
+}
+
+#flashyFont {
+    font-family: 'Script MT Bold', Times, cursive;
 }
